fix font and logo blurry

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -257,6 +257,19 @@ h2, h3, h4 {
   }
 }
 
+  @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5),only screen and (min-resolution: 240dpi) {
+
+  #logo-color-orange {
+
+    &.color {
+      background: image-url("retina_logo.png") no-repeat;
+      background-size: 170px;
+      top: 3px;
+      position: relative;
+    }
+  }
+}
+
 // End Naviagtion Style
 
 // Button Style
